# hmr

./: CMakeLists.txt  package.xml
config/: controller.yaml  hmr_control copy.yaml  hmr_control.yaml  joint_trajectory_controller.yaml  ros_controllers.yaml
hmr_control/config/: hmr_control.yaml  hmr_control1.yaml  hmr_control2.yaml  hmr_control_trajectory.yaml  joint_names_hmr.yaml
hmr_control/launch/: hmr_control.launch  hmr_control_trajectory.launch
hmr_description/launch/: display.launch  display_trajectory.launch  gazebo.launch  main.py  position.launch  rviz.launch
hmr_description/meshes/: base_link.STL  llink1.STL  llink2.STL  llink3.STL  rlink1.STL  rlink2.STL  rlink3.STL
hmr_description/rviz/: urdf.rviz
hmr_description/src/: data.csv  data2.csv  data3.csv  data4.csv  data5 copy.csv  data6.csv  main.cpp  main.py  pose  pose copy.cpp  pose.cpp  pose.csv  pose.py  tes_excel.cpp  test.py  test_excel.py
hmr_description/urdf/: gazebo.sdf  gazebo.urdf  gazebo.xacro  hmr.csv  hmr.urdf  khongchinhsua.xacro  materials.xarco  test.urdf  test2 copy.xacro  test2.gazebo  test2.gazebo.xacro  test2.urdf  test2.urdf.xacro  test2.xacro  test2_IMU.xacro  test2_gazebo.xacro  test2_inertial copy.xacro  test2_inertial.xacro  test2_not_IMU.xacro  test2_trajectory.xacro  test2_ver2.xacro  transmission.xacro  variable.xacro
hmr_gazebo/launch/: gazebo_xacro.launch  gazebo_xacro_test.launch  gazebo_xacro_trajectory.launch
hmr_gazebo/worlds/: empty.world
launch/: display.launch  gazebo.launch  gazebo_xacro.launch  gazebo_xarco.launch  hmr_control.launch  ros_controllers.launch  rviz.launch
meshes/: llink2.STL  rlink2.STL
rviz/: urdf.rviz
urdf/: gazebo.urdf  hmr.urdf  khongchinhsua.xacro  test.urdf  test2.sdf  test2.urdf  test2.xacro
