<package format="2">
  <name>hmr</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for hmr</p>
    <p>This package contains configuration data, 3D models and launch files
for hmr robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <!-- <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend> -->

  <build_depend>forward_command_controller</build_depend> 
  <build_depend>hardware_interface</build_depend>   
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>   
  <build_depend>rospy</build_depend>   
  <build_depend>std_msgs</build_depend>   
  <build_export_depend>forward_command_controller</build_export_depend> 
  <build_export_depend>hardware_interface</build_export_depend> 
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>controller_interface</exec_depend> 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>      

  <export>
    <architecture_independent />
  </export>
</package>
